--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mei-pjotinha-app",
+  "name": "melios",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,8 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "i": "^0.3.6",
+    "npm": "^7.11.1",
     "register-service-worker": "^1.7.1",
+    "v-money": "^0.8.1",
+    "v-money-plus": "^0.1.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
