--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "chartist": "^0.11.4",
     "core-js": "^3.6.5",
     "i": "^0.3.6",
     "npm": "^7.11.1",
