--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "chartist": "^0.11.4",
+    "chartist-plugin-legend": "^0.6.2",
     "core-js": "^3.6.5",
     "i": "^0.3.6",
     "npm": "^7.11.1",
@@ -24,6 +25,8 @@
     "@vue/cli-plugin-pwa": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "sass": "^1.32.12",
+    "sass-loader": "^10",
     "vue-template-compiler": "^2.6.11"
   }
 }
